--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oterofficia-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node ./src/server.ts"
   },
