--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "nodemon --exec ts-node ./src/server.ts",
-    "start": "node ./src/server.ts",
+    "start": "node ./src/server.ts"
   },
   "repository": {
     "type": "git",
