Testando deploy no serviço Cyclic Cloud

--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-<<<<<<< HEAD
-    "start": "node src/index.js",
-    "dev": "nodemon --exec ts-node ./src/server.ts"
-=======
     "dev": "nodemon --exec ts-node ./src/server.ts",
     "start": "node ./src/server.ts"
->>>>>>> 2ab5092f996b93716a64ba69b339bfa3d496dd93
   },
   "repository": {
     "type": "git",
@@ -34,7 +29,6 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "ts-node": "^10.9.1",
-    "uuidv4": "^6.2.13",
-    "yup": "^0.32.11"
+    "uuidv4": "^6.2.13"
   }
 }
