--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "oterofficia-backend",
   "version": "1.0.0",
   "description": "",
+  "main": "src/server.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node ./src/server.ts",
-    "start": "node ./src/server.ts"
+    "start": "node build/server.js"
   },
   "repository": {
     "type": "git",
