--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
+    "build": "tsc",
     "dev": "nodemon --exec ts-node ./src/server.ts",
-    "start": "node build/server.js"
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
